packages/kyvernoPolicies/chart/tests/vpol/restrict-host-ports-cel/kyverno-test/resource.yaml
###### Pods - Bad (hostPort outside the allowed ranges)
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-container-hostport
  namespace: default
spec:
  containers:
  - name: c1
    image: nginx
    ports:
    - containerPort: 80
      hostPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-initcontainer-hostport
  namespace: default
spec:
  containers:
  - name: c1
    image: nginx
  initContainers:
  - name: init1
    image: nginx
    ports:
    - containerPort: 8080
      hostPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-ephemeralcontainer-hostport
  namespace: default
spec:
  containers:
  - name: c1
    image: nginx
  ephemeralContainers:
  - name: debug1
    image: nginx
    ports:
    - containerPort: 443
      hostPort: 443
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-gap-hostport
  namespace: default
spec:
  containers:
  - name: c1
    image: nginx
    ports:
    - containerPort: 8080
      hostPort: 65000
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-multiple-ports
  namespace: default
spec:
  containers:
  - name: c1
    image: nginx
    ports:
    - containerPort: 8080
      hostPort: 64500
    - containerPort: 9090
      hostPort: 9090
---
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-no-ports
  namespace: default
spec:
  containers:
  - name: c1
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-no-hostport
  namespace: default
spec:
  containers:
  - name: c1
    image: nginx
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-exact-hostport
  namespace: default
spec:
  containers:
  - name: c1
    image: nginx
    ports:
    - containerPort: 8080
      hostPort: 63999
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-range-hostport
  namespace: default
spec:
  containers:
  - name: c1
    image: nginx
    ports:
    - containerPort: 8080
      hostPort: 64999
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-open-ended-hostport
  namespace: default
spec:
  containers:
  - name: c1
    image: nginx
    ports:
    - containerPort: 8080
      hostPort: 70000
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-initcontainer-hostport
  namespace: default
spec:
  containers:
  - name: c1
    image: nginx
  initContainers:
  - name: init1
    image: nginx
    ports:
    - containerPort: 8080
      hostPort: 64000
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-all-containers
  namespace: default
spec:
  containers:
  - name: c1
    image: nginx
    ports:
    - containerPort: 8080
      hostPort: 63999
  initContainers:
  - name: init1
    image: nginx
    ports:
    - containerPort: 9090
      hostPort: 64100
  ephemeralContainers:
  - name: debug1
    image: nginx
    ports:
    - containerPort: 7070
      hostPort: 70000
---
###### Deployments - Bad
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment-hostport
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: c1
        image: nginx
        ports:
        - containerPort: 80
          hostPort: 80
---
###### Deployments - Good
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment-hostport
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: c1
        image: nginx
        ports:
        - containerPort: 8080
          hostPort: 64000
